[package]
name = "getscreen"
version = "0.1.0"
authors = ["Lucas Bonomo <bonomo.lucas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screenshots = "0.4.5"


[dependencies.windows]
version = "0.33.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
